--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -8,6 +8,8 @@ on:
         
 jobs:
   build-project:
+    permissions:
+      pull-requests: 'write'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
