--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -8,8 +8,7 @@ on:
         
 jobs:
   build-project:
-    permissions:
-      pull-requests: 'write'
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
