--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -29,7 +29,7 @@ jobs:
         id: npm-audit
         run: |
           AUDIT_LOG="$(npm audit)"
-          echo "::set-output name=AUDIT_LOG::$AUDIT_LOG"
+          echo "$AUDIT_LOG" >> $GITHUB_OUTPUT
         continue-on-error: true
 
       - name: Add PR comment
