--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -29,9 +29,10 @@ jobs:
         id: npm-audit
         run: |
           AUDIT_LOG=$(((npm audit) 2>&1) || true)
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          AUDIT_LOG=${AUDIT_LOG//\`}
+          echo "AUDIT_LOG<<EOF" >> $GITHUB_OUTPUT
           echo "$AUDIT_LOG" >> $GITHUB_OUTPUT
-          echo "$EOF" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
         continue-on-error: true
 
       - name: Add PR comment
