revert previous change

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -29,6 +29,7 @@ jobs:
         id: npm-audit
         run: |
           AUDIT_LOG=$(((npm audit) 2>&1) || true)
+          AUDIT_LOG=${AUDIT_LOG//\`}
           echo "AUDIT_LOG<<EOF" >> $GITHUB_OUTPUT
           echo "$AUDIT_LOG" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
